# Automative-System-Management

./: Automotive System Management_Documentation.docx  CMakeLists.txt  README.md  main.cpp  ~$tomotive System Management_Documentation.docx
db/: DatabaseManager.cpp  DatabaseManager.h
